[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cluster_statistics"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Package to compute cluster statistics."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/alfredjynx/cluster-statistics"
Issues = "https://github.com/alfredjynx/cluster-statistics/issues"